--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="./css/program.css" />
     <link rel="stylesheet" href="./css/hello.css" />
     <link rel="stylesheet" href="./css/faq.css" />
+    <link rel="stylesheet" href="./css/gForm.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
@@ -109,7 +111,7 @@
     <section class="hello">
       <div class="my-container big-container d-flex justify-content-between">
         <div class="hello-left">
-          <img class="hello-friends" src="./img/hello/friends.png" alt="" />
+          <img class="hello-friends" src="./img/hello/friends.svg" alt="" />
           <div class="descr mt-3">
             Приглашаем вас разделить вместе с нами этот счастливый день,
             к которому мы шли пять лет. Для нас он очень важен, поэтому,
@@ -118,16 +120,30 @@
           </div>
           <img class="hello-we desctop" src="./img/hello/we.png" alt="" />
         </div>
-        <div class="hello-right">
+        <div class="hello-right mobile-none">
           <div class="d-flex">
-            <img class="hello-july" src="./img/hello/july.png" alt="" />
+            <img class="hello-july" src="./img/hello/july.svg" alt="" />
             <div class="descr hello-descr">
               Увидимся на свадьбе! <br />Обнимаем:)
             </div>
           </div>
           <div class="d-flex mt-1">
-            <img class="hello-artur" src="./img/hello/artur.png" alt="" />
+            <img class="hello-artur" src="./img/hello/artur.svg" alt="" />
             <img class="hello-we2" src="./img/hello/we2.png" alt="" />
+          </div>
+        </div>
+        <div class="hello-right desctop-none">
+          <div class="d-flex mt-1">
+            <img class="hello-we2" src="./img/hello/we2.png" alt="" />
+            <div class="d-flex justify-content-between flex-column ms-4">
+              <div class="d-flex">
+                <img class="hello-artur" src="./img/hello/artur.svg" alt="" />
+                <img class="hello-july" src="./img/hello/july.svg" alt="" />
+              </div>
+              <div class="descr hello-descr">
+                Увидимся<br />на свадьбе! <br />Обнимаем:)
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -152,7 +168,7 @@
         >
           <div class="program-block-time title descr-color">15:40</div>
           <div class="program-heart">
-            <img src="./icons/heart.svg" alt="" />
+            <img class="blue-heart" src="./icons/heart.svg" alt="" />
           </div>
           <div class="program-block-text">
             <div class="program-block-title descr-title">
@@ -171,7 +187,7 @@
         >
           <div class="program-block-time title descr-color">16:20</div>
           <div class="program-heart">
-            <img src="./icons/heart.svg" alt="" />
+            <img class="blue-heart" src="./icons/heart.svg" alt="" />
           </div>
           <div class="program-block-text">
             <div class="program-block-title descr-title">Роспись в ЗАГС</div>
@@ -185,7 +201,7 @@
         >
           <div class="program-block-time title descr-color">17:30</div>
           <div class="program-heart">
-            <img src="./icons/heart.svg" alt="" />
+            <img class="blue-heart" src="./icons/heart.svg" alt="" />
           </div>
           <div class="program-block-text">
             <div class="program-block-title descr-title">Камерный ужин</div>
@@ -202,7 +218,7 @@
         >
           <div class="program-block-time title descr-color">22:30</div>
           <div class="program-heart">
-            <img src="./icons/heart.svg" alt="" />
+            <img class="blue-heart" src="./icons/heart.svg" alt="" />
           </div>
           <div class="program-block-text">
             <div class="program-block-title descr-title">
@@ -384,7 +400,7 @@
           alt=""
           class="blue-heart mx-auto d-block mt-4"
         />
-        <div class="little-mt d-flex justify-content-between">
+        <div class="little-mt d-flex justify-content-between mobile-none">
           <img
             src="./img/dress/ladies/1.png"
             alt=""
@@ -410,7 +426,48 @@
             data-aos-duration="1200"
           />
         </div>
-        <div class="mt-5 d-flex justify-content-between">
+        <div class="little-mt desctop-none">
+          <div class="w-100">
+            <div class="check-block w-100 mb-3">
+              <img
+                src="./icons/nocheck.svg"
+                data-aos="fade-up"
+                data-aos-anchor-placement="bottom-bottom"
+                data-aos-duration="1800"
+                alt=""
+                class="check w-100"
+              />
+            </div>
+            <img
+            src="./img/dress/ladies/2.png"
+            alt=""
+            class="dress-ladies-image dress-ladies-image-big "
+            data-aos="fade-up"
+            data-aos-anchor-placement="bottom-bottom"
+            data-aos-duration="900"
+          />
+          </div>
+          <div class="d-flex justify-content-between">
+            <img
+              src="./img/dress/ladies/1.png"
+              alt=""
+              class="dress-ladies-image"
+              data-aos="fade-up"
+              data-aos-anchor-placement="bottom-bottom"
+              data-aos-duration="600"
+            />
+            
+            <img
+              src="./img/dress/ladies/3.png"
+              alt=""
+              class="dress-ladies-image"
+              data-aos="fade-up"
+              data-aos-anchor-placement="bottom-bottom"
+              data-aos-duration="1200"
+            />
+          </div>
+        </div>
+        <div class="mt-2 mt-md-5 d-flex justify-content-between">
           <div class="check-block">
             <img
               src="./icons/check.svg"
@@ -421,7 +478,7 @@
               class="check"
             />
           </div>
-          <div class="check-block">
+          <div class="check-block mobile-none">
             <img
               src="./icons/nocheck.svg"
               data-aos="fade-up"
@@ -538,14 +595,32 @@
       </div>
     </section>
 
+
+    <section class="g-form">
+      <div class="mega-title"><span class="mobile-none">доргие</span> друзья,отметье своё <span class="blue-text">присутствие</span> в гугл <span class="from-heart-icon">форме<img class="blue-heart" src="./icons/heart.svg" alt=""></span></div>
+      <a href="https://forms.gle/NMGXNHsyNhxvi6hm9" target="_blank" class="go-form">Перейти в форму</a>
+    </section>
+
+
     <footer class="section-mt footer">
-      <script src="./js/timer.js"></script>
+      <div class="footer-text">
+        <h1 class="title">ЮЛИЯ И АРТУР</h1>
+        <div class="descr">Создано женихом и невестой, с любовью</div>
+      </div>
+      <div class="footer-links">
+        <div class="footer-links-container">
+          <a target="_blank" href="https://t.me/+-3y2xg2u4S45MjRi">https://t.me/+-3y2xg2u4S45MjRi</a>
+          <div class="footer-line"></div>
+          <div class="descr">Ссылка на груповой чат</div>
+        </div>
+      </div>
+    </footer>
+    <script src="./js/timer.js"></script>
       <script src="./js/maxSize.js"></script>
       <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
       <script src="./js/aos.js"></script>
       <script src="./js/faq.js"></script>
       <script src="./js/map.js"></script>
       <script src="./js/menu.js"></script>
-    </footer>
   </body>
 </html>
