--- a/index.html
+++ b/index.html
@@ -467,13 +467,11 @@
             />
           </div>
         </div>
-        <div class="mt-2 mt-md-5 d-flex justify-content-between">
+        <div class="mt-2 mt-md-5 d-flex justify-content-between"
+        data-aos="fade-down">
           <div class="check-block">
             <img
               src="./icons/check.svg"
-              data-aos="fade-up"
-              data-aos-anchor-placement="bottom-bottom"
-              data-aos-duration="1500"
               alt=""
               class="check"
             />
@@ -481,9 +479,6 @@
           <div class="check-block mobile-none">
             <img
               src="./icons/nocheck.svg"
-              data-aos="fade-up"
-              data-aos-anchor-placement="bottom-bottom"
-              data-aos-duration="1800"
               alt=""
               class="check"
             />
@@ -491,9 +486,6 @@
           <div class="check-block">
             <img
               src="./icons/check.svg"
-              data-aos="fade-up"
-              data-aos-anchor-placement="bottom-bottom"
-              data-aos-duration="2100"
               alt=""
               class="check"
             />
