--- a/index.html
+++ b/index.html
@@ -172,10 +172,11 @@
           </div>
           <div class="program-block-text">
             <div class="program-block-title descr-title">
-              Сборы гостей у ЗАГСА
+              Сборы гостей <br class="desctop-none">
+              у ЗАГСА
             </div>
-            <div class="program-block-descr descr descr-kazimir">
-              Санкт-Петербург, Английская набережная, д.28
+            <div class="program-block-descr descr">
+              Санкт-Петербург, Английская набережная, <br class="desctop-none">д.28
             </div>
           </div>
         </div>
@@ -205,8 +206,8 @@
           </div>
           <div class="program-block-text">
             <div class="program-block-title descr-title">Камерный ужин</div>
-            <div class="program-block-descr descr descr-kazimir">
-              Бар «Раскольников» Владимирский просп., 19 (этаж 7)
+            <div class="program-block-descr descr">
+              Бар «Раскольников» Владимирский просп., 19 <br class="desctop-none">(этаж 7)
             </div>
           </div>
         </div>
@@ -232,14 +233,12 @@
     <section class="map section-mt">
       <div
         class="title-flex-block my-container"
-        data-aos="fade-up"
-        data-aos-anchor-placement="bottom-bottom"
       >
         <h3 class="title">церемония</h3>
         <div class="title-flex-block-line"></div>
         <h3 class="title">16:20</h3>
         <div class="title-flex-block-line second"></div>
-        <h3 class="descr descr-kazimir">
+        <h3 class="descr ">
           Первый ЗАГС<br />на Английской <br />набережной
         </h3>
       </div>
@@ -247,8 +246,6 @@
         <img class="map-image" src="./img/map/1.png" alt="" />
         <div
           class="position-relative"
-          data-aos="fade-up"
-          data-aos-anchor-placement="bottom-bottom"
         >
           <iframe
             src="https://yandex.ru/map-widget/v1/?um=constructor%3Ad8bb9a3670c3991a0eb73935777c976101e728083b5dd52b63c1e1f403f00ea1&amp;source=constructor"
@@ -266,8 +263,6 @@
     <section class="map section-mt">
       <div
         class="title-flex-block my-container"
-        data-aos="fade-up"
-        data-aos-anchor-placement="bottom-bottom"
       >
         <h3 class="title">банкет</h3>
         <div class="title-flex-block-line"></div>
@@ -279,8 +274,6 @@
         <img class="map-image" src="./img/map/2.png" alt="" />
         <div
           class="position-relative"
-          data-aos="fade-up"
-          data-aos-anchor-placement="bottom-bottom"
         >
           <iframe
             src="https://yandex.ru/map-widget/v1/?um=constructor%3Aa1f6da55f6c72c28516fdaa54e7146568c07bc7794ddd17b873c2ce3f1350720&amp;source=constructor"
@@ -332,47 +325,32 @@
         </div>
       </div>
       <div class="descr little-mt text-center">
-        Большая просьба подойти с уважением <br />
-        к дресс-коду, для нас это важно. Белый <br />
-        и чёрный найдутся у каждого в гардеробе:)
+        Большая просьба подойти <br class="desctop-none"/> с уважением <br class="mobile-none"/>
+        к дресс-коду, для нас это важно. Белый <br class="mobile-none"/>
+        и чёрный найдутся у каждого в гардеробе:)
       </div>
       <div class="dress__collage little-mt">
         <div class="dress__collage-little">
           <img
             src="./img/dress/1.png"
-            data-aos="fade-up"
-            data-aos-anchor-placement="bottom-bottom"
-            data-aos-duration="100"
             alt=""
           />
           <img
             src="./img/dress/2.png"
-            data-aos="fade-up"
-            data-aos-anchor-placement="bottom-bottom"
-            data-aos-duration="300"
             alt=""
           />
           <img
             src="./img/dress/3.png"
-            data-aos="fade-up"
-            data-aos-anchor-placement="bottom-bottom"
-            data-aos-duration="500"
             alt=""
           />
           <img
             src="./img/dress/4.png"
-            data-aos="fade-up"
-            data-aos-anchor-placement="bottom-bottom"
-            data-aos-duration="700"
             alt=""
           />
         </div>
         <div class="dress__collage-big">
           <img
             src="./img/dress/5.png"
-            data-aos="fade-up"
-            data-aos-anchor-placement="bottom-bottom"
-            data-aos-duration="900"
             alt=""
           />
         </div>
@@ -405,25 +383,16 @@
             src="./img/dress/ladies/1.png"
             alt=""
             class="dress-ladies-image"
-            data-aos="fade-up"
-            data-aos-anchor-placement="bottom-bottom"
-            data-aos-duration="600"
           />
           <img
             src="./img/dress/ladies/2.png"
             alt=""
             class="dress-ladies-image"
-            data-aos="fade-up"
-            data-aos-anchor-placement="bottom-bottom"
-            data-aos-duration="900"
           />
           <img
             src="./img/dress/ladies/3.png"
             alt=""
             class="dress-ladies-image"
-            data-aos="fade-up"
-            data-aos-anchor-placement="bottom-bottom"
-            data-aos-duration="1200"
           />
         </div>
         <div class="little-mt desctop-none">
@@ -431,9 +400,6 @@
             <div class="check-block w-100 mb-3">
               <img
                 src="./icons/nocheck.svg"
-                data-aos="fade-up"
-                data-aos-anchor-placement="bottom-bottom"
-                data-aos-duration="1800"
                 alt=""
                 class="check w-100"
               />
@@ -442,9 +408,6 @@
             src="./img/dress/ladies/2.png"
             alt=""
             class="dress-ladies-image dress-ladies-image-big "
-            data-aos="fade-up"
-            data-aos-anchor-placement="bottom-bottom"
-            data-aos-duration="900"
           />
           </div>
           <div class="d-flex justify-content-between">
@@ -452,18 +415,12 @@
               src="./img/dress/ladies/1.png"
               alt=""
               class="dress-ladies-image"
-              data-aos="fade-up"
-              data-aos-anchor-placement="bottom-bottom"
-              data-aos-duration="600"
             />
             
             <img
               src="./img/dress/ladies/3.png"
               alt=""
               class="dress-ladies-image"
-              data-aos="fade-up"
-              data-aos-anchor-placement="bottom-bottom"
-              data-aos-duration="1200"
             />
           </div>
         </div>
@@ -607,7 +564,8 @@
         </div>
       </div>
     </footer>
-    <script src="./js/timer.js"></script>
+      <script src="./js/jquery.min.js"></script>
+      <script src="./js/timer.js"></script>
       <script src="./js/maxSize.js"></script>
       <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
       <script src="./js/aos.js"></script>
