--- a/index.html
+++ b/index.html
@@ -334,24 +334,34 @@
           <img
             src="./img/dress/1.png"
             alt=""
+            class="fadein"
+            data-time-plus="0"
           />
           <img
             src="./img/dress/2.png"
             alt=""
+            class="fadein"
+            data-time-plus="500"
           />
           <img
             src="./img/dress/3.png"
             alt=""
+            class="fadein"
+            data-time-plus="1000"
           />
           <img
             src="./img/dress/4.png"
             alt=""
+            class="fadein"
+            data-time-plus="1500"
           />
         </div>
         <div class="dress__collage-big">
           <img
             src="./img/dress/5.png"
             alt=""
+            class="fadein"
+            data-time-plus="2000"
           />
         </div>
 
@@ -376,23 +386,26 @@
         <img
           src="./icons/heart.svg"
           alt=""
-          class="blue-heart mx-auto d-block mt-4"
+          class="blue-heart mx-auto d-block mt-4 mobile-none"
         />
         <div class="little-mt d-flex justify-content-between mobile-none">
           <img
             src="./img/dress/ladies/1.png"
             alt=""
-            class="dress-ladies-image"
+            class="dress-ladies-image fadein"
+            data-time-plus="0"
           />
           <img
             src="./img/dress/ladies/2.png"
             alt=""
-            class="dress-ladies-image"
+            class="dress-ladies-image fadein"
+            data-time-plus="500"
           />
           <img
             src="./img/dress/ladies/3.png"
             alt=""
-            class="dress-ladies-image"
+            class="dress-ladies-image fadein"
+            data-time-plus="1000"
           />
         </div>
         <div class="little-mt desctop-none">
@@ -407,24 +420,27 @@
             <img
             src="./img/dress/ladies/2.png"
             alt=""
-            class="dress-ladies-image dress-ladies-image-big "
+            class="dress-ladies-image dress-ladies-image-big fadein"
+            data-time-plus="0"
           />
           </div>
           <div class="d-flex justify-content-between">
             <img
               src="./img/dress/ladies/1.png"
               alt=""
-              class="dress-ladies-image"
+              class="dress-ladies-image fadein"
+            data-time-plus="500"
             />
             
             <img
               src="./img/dress/ladies/3.png"
               alt=""
-              class="dress-ladies-image"
+              class="dress-ladies-image fadein"
+            data-time-plus="1000"
             />
           </div>
         </div>
-        <div class="mt-2 mt-md-5 d-flex justify-content-between"
+        <div class="mt-4 mt-md-5 d-flex justify-content-between"
         data-aos="fade-down">
           <div class="check-block">
             <img
@@ -470,13 +486,13 @@
             >
           </div>
           <div class="faq-answer descr">
-            Для нас лучший подарок — это деньги, т.к мы копим на свадебное
-            путешествие. <br />
-            Сервиз, постельное белье, домашнюю утварь мы хотели бы выбрать сами
-            по своим <br />
-            вкусовым предпочтениям. Также большая просьба не приносить цветы,
-            вместо <br />них можно дарить вино. Но если вы хотите устроить
-            нам сюрприз — можете <br />посоветоваться насчёт подарка с нашим
+            Для нас лучший подарок — это деньги, т.к мы копим <br class="desctop-none" /> на свадебное
+            путешествие. <br class="mobile-none" />
+            Сервиз, постельное белье, домашнюю утварь мы хотели бы выбрать сами
+            по своим <br class="mobile-none" />
+            вкусовым предпочтениям. Также большая просьба не приносить цветы,
+            вместо <br class="mobile-none" />них можно дарить вино. Но если вы хотите устроить
+            нам сюрприз — можете <br class="mobile-none" />посоветоваться насчёт подарка с нашим
             свадебным организатором Елизаветой.
           </div>
         </div>
@@ -491,11 +507,11 @@
             >
           </div>
           <div class="faq-answer descr">
-            Наш свадебный организатор — Елизавета с радостью ответит на ваши
-            вопросы <br />
-            в день мероприятия и за несколько дней до него. Просьба,
-            не беспокоить <br />
-            по пустякам. Её номер телефона: +7 (ххх) ххх-хх-хх.
+            Наш свадебный организатор — Елизавета с радостью ответит на ваши
+            вопросы <br class="mobile-none" />
+            в день мероприятия и за несколько дней до него. <br class="desctop-none" /><br class="desctop-none" />Просьба,
+            не беспокоить <br class="mobile-none" />
+            по пустякам. Её номер телефона: <a class="default-link" href="tel:+79811815051">+7 (981) 181-50-51</a>
           </div>
         </div>
         <div class="faq-block">
@@ -509,14 +525,14 @@
             >
           </div>
           <div class="faq-answer descr">
-            Приглашаем вступить всех в наш свадбеный чат в телеграм, куда
-            вы можете <br />
-            в прямом эфире записывать видеосообщения, выкладывать фотографии
-            и голосовые <br />
-            поздравления. Для нас — это огромная память. Также в этом чате за
-            несколько <br />
+            Приглашаем вступить всех в наш свадбеный чат в телеграм, куда
+            вы можете <br class="mobile-none" />
+            в прямом эфире записывать видеосообщения, выкладывать фотографии
+            и голосовые <br class="mobile-none" />
+            поздравления. Для нас — это огромная память. Также в этом чате за
+            несколько <br class="mobile-none" />
             дней будет находится вся организационная информация. <br /><br />
-            Ссылка на чат: https://t.me/+-3y2xg2u4S45MjRi
+            Ссылка на чат: <a class="default-link" target="_blank" href="https://t.me/+-3y2xg2u4S45MjRi">https://t.me/+-3y2xg2u4S45MjRi</a>
           </div>
         </div>
         <div class="faq-block">
@@ -531,12 +547,12 @@
           </div>
           <div class="faq-answer descr">
             Мероприятие рассчитано на взрослую аудиторию и некоторые моменты
-            могут <br />показаться для маленьких детей утомительными. Мы
-            переживаем о комфорте <br />каждого гостя и хотим, чтобы все
-            отдохнули душой на нашем празднике. Однако, <br />если по каким-то
-            причинам не получается оставить детей младше семи лет дома, <br />то
+            могут <br class="mobile-none" />показаться для маленьких детей утомительными. Мы
+            переживаем о комфорте <br class="mobile-none" />каждого гостя и хотим, чтобы все
+            отдохнули душой на нашем празднике. Однако, <br class="mobile-none" />если по каким-то
+            причинам не получается оставить детей младше семи лет дома, <br class="mobile-none" />то
             огромная просьба обговорить этот момент с нами заранее, за
-            несколько<br />
+            несколько<br class="mobile-none" />
             месяцев и поставить в известность, чтобы скорректировать программу
             дня.
           </div>
