--- a/index.html
+++ b/index.html
@@ -378,10 +378,10 @@
           девушкам
         </h3>
         <div class="descr little-mt text-center">
-          Прекрасные девушки! Очень прошу не приходить в белом платье.
-          <br />Вы можете комбинировать белый и чёрный в своих образах.
-          Например, <br />совместить белый пиджак и чёрный атласный топ,
-          или взять платье <br />чёрного или бежевого цвета.
+          Прекрасные девушки! Очень прошу не приходить в белом платье.
+          <br class="" />Вы можете комбинировать белый <br class="desctop-none">и чёрный в своих образах.
+          Например, <br class="mobile-none"/>совместить белый пиджак и чёрный атласный топ,
+          или взять платье <br class="mobile-none"/>чёрного или бежевого цвета.
         </div>
         <img
           src="./icons/heart.svg"
@@ -410,7 +410,7 @@
         </div>
         <div class="little-mt desctop-none">
           <div class="w-100">
-            <div class="check-block w-100 mb-3">
+            <div class="check-block w-100">
               <img
                 src="./icons/nocheck.svg"
                 alt=""
@@ -486,7 +486,7 @@
             >
           </div>
           <div class="faq-answer descr">
-            Для нас лучший подарок — это деньги, т.к мы копим <br class="desctop-none" /> на свадебное
+            Для нас лучший подарок — <br class="desctop-none" />это деньги, т.к мы копим  на свадебное
             путешествие. <br class="mobile-none" />
             Сервиз, постельное белье, домашнюю утварь мы хотели бы выбрать сами
             по своим <br class="mobile-none" />
@@ -528,8 +528,8 @@
             Приглашаем вступить всех в наш свадбеный чат в телеграм, куда
             вы можете <br class="mobile-none" />
             в прямом эфире записывать видеосообщения, выкладывать фотографии
-            и голосовые <br class="mobile-none" />
-            поздравления. Для нас — это огромная память. Также в этом чате за
+            <br class="desctop-none" />и голосовые <br class="mobile-none" />
+            поздравления. <br class="desctop-none" /><br class="desctop-none" />Для нас — это огромная память. Также в этом чате за
             несколько <br class="mobile-none" />
             дней будет находится вся организационная информация. <br /><br />
             Ссылка на чат: <a class="default-link" target="_blank" href="https://t.me/+-3y2xg2u4S45MjRi">https://t.me/+-3y2xg2u4S45MjRi</a>
@@ -549,8 +549,8 @@
             Мероприятие рассчитано на взрослую аудиторию и некоторые моменты
             могут <br class="mobile-none" />показаться для маленьких детей утомительными. Мы
             переживаем о комфорте <br class="mobile-none" />каждого гостя и хотим, чтобы все
-            отдохнули душой на нашем празднике. Однако, <br class="mobile-none" />если по каким-то
-            причинам не получается оставить детей младше семи лет дома, <br class="mobile-none" />то
+            отдохнули душой на нашем празднике. <br class="desctop-none" /><br class="desctop-none" />Однако, <br class="mobile-none" />если по каким-то
+            причинам не получается оставить детей младше семи лет дома, <br  class="mobile-none" />то
             огромная просьба обговорить этот момент с нами заранее, за
             несколько<br class="mobile-none" />
             месяцев и поставить в известность, чтобы скорректировать программу
