--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
     <footer class="section-mt footer">
       <div class="footer-text">
         <h1 class="title">ЮЛИЯ И АРТУР</h1>
-        <div class="descr">Создано женихом и невестой, с любовью</div>
+        <div class="descr">Создано женихом и невестой, <br class="desctop-none">с любовью</div>
       </div>
       <div class="footer-links">
         <div class="footer-links-container">
