--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
   <body>
     <div class="menu my-container">
       <div class="menu-block">
-        <a href="#" class="menu-block-link">Программа дня</a>
+        <a href="#program" class="menu-block-link">Программа дня</a>
       </div>
       <div class="menu-block">
-        <a href="#" class="menu-block-link">Роспись</a>
+        <a href="#painting" class="menu-block-link">Роспись</a>
       </div>
       <div class="menu-block">
-        <a href="#" class="menu-block-link">Дресскод</a>
+        <a href="#dress" class="menu-block-link">Дресскод</a>
       </div>
       <div class="menu-block">
-        <a href="#" class="menu-block-link">Частые вопросы</a>
+        <a href="#faq" class="menu-block-link">Частые вопросы</a>
       </div>
       <div class="menu-block">
-        <a href="#" class="menu-block-link">Банкет</a>
+        <a href="#food" class="menu-block-link">Банкет</a>
       </div>
+      <!-- <div class="menu-block">
+        <a href="#format" class="menu-block-link">О формате</a>
+      </div> -->
       <div class="menu-block">
-        <a href="#" class="menu-block-link">О формате</a>
-      </div>
-      <div class="menu-block">
-        <a href="#" class="menu-block-link">Анкета</a>
+        <a href="#form" class="menu-block-link">Анкета</a>
       </div>
     </div>
     <div class="burger-button">
@@ -149,7 +149,7 @@
       </div>
       <img class="hello-we mobile" src="./img/hello/we.png" alt="" />
     </section>
-    <section class="program-day section-mt">
+    <section class="program-day section-mt" id="program">
       <div class="program-day-title title text-center">
         программа нашего дня
       </div>
@@ -230,7 +230,7 @@
       </div>
     </section>
 
-    <section class="map section-mt">
+    <section class="map section-mt" id="painting">
       <div
         class="title-flex-block my-container"
       >
@@ -260,7 +260,7 @@
       </div>
     </section>
 
-    <section class="map section-mt">
+    <section class="map section-mt" id="food">
       <div
         class="title-flex-block my-container"
       >
@@ -288,7 +288,7 @@
       </div>
     </section>
 
-    <section class="section-mt dress">
+    <section class="section-mt dress" id="dress">
       <div class="my-container">
         <h3
           class="title text-center"
@@ -466,7 +466,7 @@
         </div>
       </div>
     </section>
-    <section class="section-mt faq">
+    <section class="section-mt faq" id="faq">
       <div class="my-container big-container">
         <h3
           class="title text-center"
@@ -561,7 +561,7 @@
     </section>
 
 
-    <section class="g-form">
+    <section class="g-form" id="form">
       <div class="mega-title"><span class="mobile-none">доргие</span> друзья,отметье своё <span class="blue-text">присутствие</span> в гугл <span class="from-heart-icon">форме<img class="blue-heart" src="./icons/heart.svg" alt=""></span></div>
       <a href="https://forms.gle/NMGXNHsyNhxvi6hm9" target="_blank" class="go-form">Перейти в форму</a>
     </section>
@@ -582,6 +582,7 @@
     </footer>
       <script src="./js/jquery.min.js"></script>
       <script src="./js/timer.js"></script>
+      <script src="./js/anchor.js"></script>
       <script src="./js/maxSize.js"></script>
       <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
       <script src="./js/aos.js"></script>
