--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
             путешествие. <br class="mobile-none" />
             Сервиз, постельное белье, домашнюю утварь мы хотели бы выбрать сами
             по своим <br class="mobile-none" />
-            вкусовым предпочтениям. Также большая просьба не приносить цветы,
+            вкусовым предпочтениям. <br class="desctop-none" /><br class="desctop-none" />Также большая просьба не приносить цветы,
             вместо <br class="mobile-none" />них можно дарить вино. Но если вы хотите устроить
             нам сюрприз — можете <br class="mobile-none" />посоветоваться насчёт подарка с нашим
             свадебным организатором Елизаветой.
