--- a/index.html
+++ b/index.html
@@ -557,6 +557,62 @@
             дня.
           </div>
         </div>
+        <div class="faq-block">
+          <div
+            class="faq-title d-flex align-items-center"
+            onclick="activeFAQ(this)"
+          >
+            <img class="faq-title-icon" src="./icons/plus.svg" alt="" />
+            <span class="faq-title-text descr-title"
+              >Как мы относимся к «Горько»?</span
+            >
+          </div>
+          <div class="faq-answer descr">
+            Скорее отрицательно, чем положительно. Большая просьба, использовать по минимуму эту традицию.
+          </div>
+        </div>
+        <div class="faq-block">
+          <div
+            class="faq-title d-flex align-items-center"
+            onclick="activeFAQ(this)"
+          >
+            <img class="faq-title-icon" src="./icons/plus.svg" alt="" />
+            <span class="faq-title-text descr-title"
+              >Какой формат свадьбы?</span
+            >
+          </div>
+          <div class="faq-answer descr">
+            Свадьба проходит по современным традициям. Мы отказывается от классического <br class="mobile-none" />
+            формата в пользу «камерной свадьбы». Это альтернатива шумной и яркой вечеринке,<br class="mobile-none" />
+            <br class="descr-none" />на которой веселятся ночь напролет. 
+            <br class="descr-none" /><br class="descr-none" />
+            Свадьба в камерном стиле — это званый ужин,<br class="mobile-none" />
+            на котором присутствуют только близкие <br class="descr-none" />и родные люди. Это торжество,  на котором<br class="mobile-none" />
+            присутствуют самые близкие люди, за счет чего создаётся уют и близость. <br class="mobile-none" />
+            <br>
+            <br class="descr-none" />
+            Наша цель — уделить внимание каждому гостю.
+          </div>
+        </div>
+        <div class="faq-block">
+          <div
+            class="faq-title d-flex align-items-center"
+            onclick="activeFAQ(this)"
+          >
+            <img class="faq-title-icon" src="./icons/plus.svg" alt="" />
+            <span class="faq-title-text descr-title"
+              >Какой стиль свадьбы?</span
+            >
+          </div>
+          <div class="faq-answer descr">
+            Свадьба проходит в стиле «old money», в переводе с английского —  тихая роскошь.<br class="mobile-none" />
+            Можно подробнее ознакомиться со стилем в интернете. 
+            <br><br>
+            Однако, мы не принуждаем всех стремиться к сто процентому попаданию в стиль. <br class="mobile-none" />
+            С нас одна лишь просьба — прийти в доступной для каждого цветовой гамме, <br class="mobile-none" />
+            которая включает в себя чёрный, белый и бежевый.
+          </div>
+        </div>
       </div>
     </section>
 
